Changed api endpoints generation + implemented auth service + imlpemented login component
