# src/app/api/models/comment-dto.ts
@@ -1,9 +1,0 @@
-/* eslint-disable */
-/* Code generated by ng-openapi-gen DO NOT EDIT. */
-
-import { UserDto } from '../models/user-dto';
-export interface CommentDto {
-  createdAt?: string;
-  createdBy?: UserDto;
-  text?: string | null;
-}
