# src/app/api/models/post-dto.ts
@@ -1,15 +1,0 @@
-/* eslint-disable */
-/* Code generated by ng-openapi-gen DO NOT EDIT. */
-
-import { CommentDto } from '../models/comment-dto';
-import { ImageDto } from '../models/image-dto';
-import { LikeDto } from '../models/like-dto';
-import { UserDto } from '../models/user-dto';
-export interface PostDto {
-  bodyHtml?: string | null;
-  comments?: Array<CommentDto> | null;
-  createdBy?: UserDto;
-  images?: Array<ImageDto> | null;
-  likes?: Array<LikeDto> | null;
-  title?: string | null;
-}
